# ofReader

./: .gitignore  Allclean  CITATION.cff  Install.sh  README.md  pyproject.toml  setup.py  tox.ini
ofReader/: __init__.py  circAverageReader.py  fileHeader.py  fvMesh.py  mapParticleToPlane.py  ofBoundaryData.py  ofFileFormat.py  ofFileReader.py  ofFileWriter.py  ofReadSupportFunctions.py  ofvolField.py  sampleLineReader.py  samplePlaneReader.py  triangleInterp.py
tests/: test_fvMesh.py  test_ofFileReader_Parallel.py  test_sampleLineReader.py  zAxisCenterLine_alpha.liquid_k_rho_sigma.csv
tests/testCase/constant/polyMesh/: boundary  faces  neighbour  owner  points
tests/testCase/processor0/0/: C  Cx  Cy  Cz
tests/testCase/processor0/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing  faces  owner  pointProcAddressing  points
tests/testCase/processor1/0/: C  Cx  Cy  Cz
tests/testCase/processor1/constant/polyMesh/: boundary  boundaryProcAddressing  cellProcAddressing  faceProcAddressing  faces  owner  pointProcAddressing  points
tests/testCase/processor2/0/: C  Cx  Cy  Cz
tests/testCase/processor2/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing  faces  owner  pointProcAddressing  points
tests/testCase/processor3/0/: C  Cx  Cy  Cz
tests/testCase/processor3/constant/polyMesh/: boundary  (+6 more)
tests/testCase/processor4/0/: C  Cx  Cy  Cz
tests/testCase/processor5/0/: C  Cx  Cy  Cz
tests/testCase/processor6/0/: C  Cx  Cy  Cz
tests/testCase/processor7/0/: C  Cx  Cy  Cz
tests/testCase/system/: blockMeshDict  controlDict
(+29 files in other folders)
